# meldpy

./: .gitignore  CITATION.cff  LICENSE  README.md  l1_combine.py  l1_combine_T.py  l1_coordinates.py  l1_downloaders.py  l1_example.ipynb  l1_example.py  l1_filters.py  l1_pipeline.py  l1_propagation.py  l1_quality.py  l1_readers.py  pipeline_flowchart.mmd  plot_l1_may2024.py  pyproject.toml  requirements.txt
docs/: pipeline_flowchart.mmd
meldpy/: __init__.py  l1_combine.py  l1_combine_T.py  l1_downloaders.py  l1_pipeline.py
meldpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
midl_pipeline/: PARAM.in.MIDL  __init__.py  l1_combine.py  l1_filters.py  l1_mhd.py  l1_midl.py  l1_pipeline.py  l1_plot.py  l1_propagation.py  l1_quality.py  l1_writers.py
midlpy/: __init__.py  l1_combine.py  l1_combine_T.py  l1_downloaders.py  l1_midl.py  l1_pipeline.py  l1_plot.py  l1_propagation.py  l1_quality.py  l1_readers.py  l1_writers.py
scratch/: _check_nans_tmp.py  _debug_may8.py  scratch_may8_reprocess.py
scripts/: PARAM.in.MIDL  l1_download_1.py  l1_download_2.py  l1_download_3.py  l1_example.py  l1_example_2.py  l1_example_3.py  l1_plot.py  l1_process.py  l1_reprocess.py  l1_writers.py  setup_batsrus.sh
