[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meldpy"
version = "0.1.0"
description = "Michigan Ensemble L1 Dataset Python Library"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "requests>=2.28",
    "cdflib>=1.0",
    "netCDF4>=1.6",
    "spacepy>=0.5",
    "pyspedas>=1.5",
]

[tool.setuptools]
packages = ["meldpy"]
